Training/kubernetes_deployment1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-node
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: hello-node
        image: mvdmeij/k8sdemo:1
        ports:
        - containerPort: 8080
