Training/kubernetes_service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdemo
  labels:
    app: k8sdemo
spec:
  type: LoadBalancer
  ports:  
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: k8sdemo
