Training/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubern8sservice
  labels:
    app: kubern8sdemo
spec:
  ports:  
  - port: 80
  selector:
    app: kubern8sdemo
  type: NodePort
