Training/k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: k8sapp.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubern8sservice
                port:
                  number: 80
